--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </nav>
   </header>
 
-<main>
+<main class="conteudo-principal">
   <center>
   <section>
     <h2>Bem-vindo à Vinheria Agnello</h2>
