--- a/src/pages/armazenagem.html
+++ b/src/pages/armazenagem.html
@@ -23,7 +23,7 @@
     </nav>
   </header>
 
-<main>
+<main class="conteudo-principal">
   <h2>Cuidados essenciais</h2>
   <p>
     O vinho é uma bebida sensível a fatores externos. Para manter sua qualidade, 
