--- a/src/pages/contato.html
+++ b/src/pages/contato.html
@@ -23,7 +23,7 @@
     </nav>
   </header>
 
-  <main>
+  <main class="conteudo-principal">
     <form>
       <h2>Fale conosco</h2>
       <label for="nome">Nome:</label>
