--- a/src/pages/historia.html
+++ b/src/pages/historia.html
@@ -23,7 +23,7 @@
     </nav>
   </header>
 
-  <main>
+  <main class="conteudo-principal">
     <section>
       <p>
         A <strong>Vinheria Agnello</strong> é uma empresa familiar que iniciou suas atividades em São Paulo há mais de <strong>15 anos</strong>. 
